Fixed the styling to fit dark mode.

--- a/src/styles/Grid.css
+++ b/src/styles/Grid.css
@@ -1,7 +1,8 @@
 .Grid-container {
   display: grid;
-  grid-template-columns: 40px, 400px;
-  grid-template-rows: 40px 400px 40px;
+  grid-template-columns: 40px, 418px;
+  grid-template-rows: 40px 418px 40px;
+  gap: 2px;
 }
 
 .Grid-coord-top {
@@ -9,6 +10,7 @@
   grid-row: 1/2;
   display: grid;
   grid-template-columns: repeat(11, 40px);
+  gap: 2px;
 }
 
 .Grid-coord-left {
@@ -17,11 +19,13 @@
   grid-row: 2/3;
   display: grid;
   grid-template-rows: repeat(10, 40px);
+  gap: 2px;
 }
 
 .Grid-coord-top > div,
 .Grid-coord-left > div {
   font-family: "Lato", sans-serif;
+  color: rgba(255, 255, 255, 0.8);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -30,28 +34,28 @@
 .Grid {
   grid-column: 2/3;
   grid-row: 2/3;
-  border-bottom: 1px solid black;
-  border-right: 1px solid black;
   display: grid;
   grid-template-columns: repeat(10, 40px);
   grid-template-rows: repeat(10, 40px);
+  gap: 2px;
 }
 
 .Grid div {
-  border-top: 1px solid black;
-  border-left: 1px solid black;
+  border: 1px solid rgba(255, 255, 255, 0.8);
 }
 
 .Grid.player2 div:hover {
-  background-color: rgba(245, 192, 192, 0.5);
+  border: 2px solid rgb(255, 190, 11);
+  background-color: rgba(255, 190, 11, 0.3);
 }
 
 .Grid.player1 .ship {
-  background-color: rgb(159, 216, 223);
+  border: 2px solid rgb(58, 134, 255);
+  background-color: rgba(58, 134, 255, 0.3);
 }
 
 .Grid .hit {
-  color: black;
+  color: rgba(255, 255, 255, 0.8);
   font-family: "Lato", sans-serif;
   display: flex;
   justify-content: center;
@@ -64,15 +68,17 @@
 }
 
 .Grid .hit.ship {
-  color: rgb(255, 113, 113);
+  color: rgb(255, 0, 110);
 }
 
 .Grid .hit.ship.sunk {
-  background-color: rgba(255, 113, 113, 0.5);
+  border: 2px solid rgb(255, 0, 110);
+  background-color: rgba(255, 0, 110, 0.3);
 }
 
 .Grid-description {
   font-family: "Lato", sans-serif;
+  color: rgba(255, 255, 255, 0.8);
   grid-column: 1/3;
   grid-row: 3/4;
   display: flex;
